--- a/scss/_page-match.scss
+++ b/scss/_page-match.scss
@@ -132,7 +132,6 @@
       align-items: center;
       width: 50%;
       flex-grow: 1;
-      border: 1px solid green;
 
       @include mq(max_md) {
         flex-direction: column;
@@ -883,6 +882,7 @@
     max-width: 90vw;
     overflow: scroll;
   }
+
   .table-row {
     padding: 12px;
     font-style: normal;
@@ -911,6 +911,7 @@
   .column-10 {
     width: 10%;
   }
+
   .column-18 {
     width: 18%;
   }
@@ -964,13 +965,303 @@
   }
 
 }
-.macth-text-overflow-club  {
+
+.macth-text-overflow-club {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 250px;
+
   @include mq(max_md) {
     max-width: 180px;
   }
 
+}
+
+.match-standing-table-wrapper {
+
+  .column-10 {
+    width: 10%;
+  }
+
+  .column-30 {
+    width: 30%;
+  }
+
+  .column-20 {
+    width: 20%;
+  }
+
+  .column-5 {
+    width: 5%;
+  }
+
+  .number {
+    min-width: 28px;
+    max-width: 28px;
+    height: 28px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    border-radius: 50%;
+    color: #1A202C;
+    text-transform: uppercase;
+  }
+
+  .number-primary {
+    background-color: #3AC5C9;
+  }
+
+  .number-secondary {
+    background-color: #DFCE33;
+  }
+
+  .number-danger {
+    background-color: #E53E3E;
+  }
+
+  .table-row {
+    padding: 6px 0px;
+    border-bottom: 1px solid #E2E8F0;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    display: flex;
+    align-items: center;
+
+    @include mq(max_md) {
+      font-weight: 400;
+      font-size: 13px;
+      line-height: 15px;
+
+    }
+
+    &:hover {
+      background-color: rgba(49, 57, 85, 0.05);
+      ;
+    }
+
+    @include mq(max_md) {
+      min-width: 846px;
+    }
+  }
+
+  .table-heading {
+    padding: 12px 0px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+
+    /* Gray:600 */
+
+    color: #718096;
+    background-color: #EDF2F7 !important;
+
+    @include mq(max_md) {
+      font-weight: 400;
+      font-size: 11px;
+      line-height: 13px;
+    }
+
+    &:hover {
+      background-color: #EDF2F7;
+    }
+  }
+
+  .row-danger {
+    // border-left: 4px solid #D53F8C;
+    background-color: rgba(213, 63, 140, 0.1);
+    position: relative;
+
+    &::after {
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 0;
+      width: 4px;
+      height: 100%;
+      background-color: #D53F8C;
+    }
+
+    &:hover {
+      background-color: rgba(213, 63, 140, 0.1);
+    }
+  }
+
+  .row-info {
+    position: relative;
+    background-color: rgba(90, 103, 216, 0.1);
+
+    &::after {
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 0;
+      width: 4px;
+      height: 100%;
+      background-color: #5A67D8;
+    }
+
+    &:hover {
+      background-color: rgba(90, 103, 216, 0.1);
+    }
+  }
+
+
+  .club-wrapper {
+    display: flex;
+    align-items: center;
+
+    img {
+      min-width: 20px;
+      max-width: 20px;
+      height: 20px;
+      object-fit: cover;
+      object-fit: cover;
+      margin-right: 8px;
+    }
+
+    .club-name {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
+
+  .match-standing-table {
+    @include mq(max_md) {
+      max-width: 90vw;
+      overflow: scroll;
+    }
+  }
+
+  .match-standing-suggesstion {
+    margin: 24px 0px;
+
+    display: flex;
+
+    @include mq(max_md) {
+      flex-direction: column;
+    }
+
+    li {
+      display: flex;
+      align-items: center;
+      margin-right: 24px;
+
+      @include mq(max_md) {
+        margin-right: 0;
+        margin-bottom: 10px;
+      }
+
+
+      .dot-primary {
+        background-color: #3AC5C9;
+      }
+
+      .dot-secondary {
+        background-color: #DFCE33;
+      }
+
+      .dot-danger {
+        background-color: #E53E3E;
+      }
+
+      .dot {
+        width: 16px;
+        height: 16px;
+        display: block;
+        border: none;
+        border-radius: 50%;
+        margin-right: 8px;
+      }
+
+      .label {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+
+        color: #1A202C;
+      }
+    }
+  }
+}
+
+.statistics-tab-content-wrapper {
+  .table-row {
+    display: flex;
+    align-items: center;
+    padding: 12px 0px;
+    border-bottom: 1px solid #EDF2F7;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    /* identical to box height */
+
+    text-align: center;
+
+    /* Gray:900 */
+
+    color: #1A202C;
+
+    @include mq(max_md) {
+      font-style: normal;
+      font-weight: 400;
+      font-size: 13px;
+      line-height: 15px;
+      text-align: center;
+    }
+  }
+
+  .table-column {
+    width: calc(100% / 3);
+  }
+
+  .statistics-info {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    /* identical to box height */
+
+
+    /* #3AC5C9 */
+
+    color: #3AC5C9;
+
+    @include mq(max_md) {
+      font-style: normal;
+      font-weight: 500;
+      font-size: 13px;
+      line-height: 15px;
+    }
+  }
+
+  .statistics-danger {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    /* identical to box height */
+
+    text-align: center;
+
+    color: #F1516E;
+
+    @include mq(max_md) {
+      font-style: normal;
+      font-weight: 500;
+      font-size: 13px;
+      line-height: 15px;
+    }
+  }
 }
